# python-intermediate-rivercatchment

./: .gitignore  README.md  catchment-analysis.py  pyproject.toml  requirements.txt  scratch.py  try.py
.github/workflows/: main.yml
catchment/: models.py
tests/: test_models.py
