[tool.poetry]
name = "catchment"
version = "1.0.0"
description = "test description"
authors = ["Eva V"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
